force-app/main/default/objects/LimitsProfilerConfig__c/LimitsProfilerConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configure standard runs of the LimitsProfiler</description>
    <label>Limits Profiler Config</label>
</CustomObject>