force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayAggregateQueries__c.field-meta.xml
<CustomField>
    <fullName>DisplayAggregateQueries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Aggregate Queries?</label>
    <type>Checkbox</type>
</CustomField>