force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayAsyncCalls__c.field-meta.xml
<CustomField>
    <fullName>DisplayAsyncCalls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Async Calls?</label>
    <type>Checkbox</type>
</CustomField>