force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayCallouts__c.field-meta.xml
<CustomField>
    <fullName>DisplayCallouts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Callouts?</label>
    <type>Checkbox</type>
</CustomField>