force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayCpuTime__c.field-meta.xml
<CustomField>
    <fullName>DisplayCpuTime__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display CPU Time?</label>
    <type>Checkbox</type>
</CustomField>