force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayDmlRows__c.field-meta.xml
<CustomField>
    <fullName>DisplayDmlRows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display DML Rows?</label>
    <type>Checkbox</type>
</CustomField>