force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayDmlStatements__c.field-meta.xml
<CustomField>
    <fullName>DisplayDmlStatements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display DML Statements?</label>
    <type>Checkbox</type>
</CustomField>