force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayEmailInvocations__c.field-meta.xml
<CustomField>
    <fullName>DisplayEmailInvocations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Email Invocations?</label>
    <type>Checkbox</type>
</CustomField>