force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayFutureCalls__c.field-meta.xml
<CustomField>
    <fullName>DisplayFutureCalls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Future Calls?</label>
    <type>Checkbox</type>
</CustomField>