force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayHeapSize__c.field-meta.xml
<CustomField>
    <fullName>DisplayHeapSize__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Heap Size?</label>
    <type>Checkbox</type>
</CustomField>