force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayMobilePushApexCalls__c.field-meta.xml
<CustomField>
    <fullName>DisplayMobilePushApexCalls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Mobile Push Apex Calls?</label>
    <type>Checkbox</type>
</CustomField>