force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayQueries__c.field-meta.xml
<CustomField>
    <fullName>DisplayQueries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Queries?</label>
    <type>Checkbox</type>
</CustomField>