force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayQueryLocatorRows__c.field-meta.xml
<CustomField>
    <fullName>DisplayQueryLocatorRows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Query Locator Rows?</label>
    <type>Checkbox</type>
</CustomField>