force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayQueryRows__c.field-meta.xml
<CustomField>
    <fullName>DisplayQueryRows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Query Rows?</label>
    <type>Checkbox</type>
</CustomField>