force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayQueueableJobs__c.field-meta.xml
<CustomField>
    <fullName>DisplayQueueableJobs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Queueable Jobs?</label>
    <type>Checkbox</type>
</CustomField>