force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplayRawTime__c.field-meta.xml
<CustomField>
    <fullName>DisplayRawTime__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Raw Time?</label>
    <type>Checkbox</type>
</CustomField>