force-app/main/default/objects/LimitsProfilerConfig__c/fields/DisplaySOSLQueries__c.field-meta.xml
<CustomField>
    <fullName>DisplaySOSLQueries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display SOSL Queries?</label>
    <type>Checkbox</type>
</CustomField>