force-app/main/default/objects/LimitsProfilerConfig__c/fields/Iterations__c.field-meta.xml
<CustomField>
    <fullName>Iterations__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Iterations</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>