force-app/main/default/objects/LimitsProfilerConfig__c/fields/ProfilerType__c.field-meta.xml
<CustomField>
    <fullName>ProfilerType__c</fullName>
    <description>Name of a Type that can be cast to a LimitsProfiler</description>
    <label>Profiler Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>